--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(235, 235, 235);
+    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
 }
 
 .container {
@@ -7,4 +7,18 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+
+.image {
+    width: 370px;
+    margin-top: 50px;
+}
+
+@media (max-width: 770px) {
+    .container {
+        margin: 0 10%;
+    }
+    .image {
+        width: 100%;
+      }
 }
